<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">吐槽墙</string>
    <string name="hello_world">你好！</string>
    <string name="action_settings">设置</string>
    <string name="username">账号</string>
    <string name="user_name">用户名：</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="newuser">新用户</string>
    <string name="lostpwd">忘记密码</string>
    <string name="friend">好友</string>
    <string name="friend_square">朋友圈</string>
    <string name="home">首页</string>
    <string name="hot_board">排行榜</string>
    <string name="anonymity_square">匿名区</string>
    <string name="write_shits">写吐槽</string>
    <string name="shits">吐槽</string>
    <string name="send_shits">发表</string>
    <string name="shits_hint">说点什么吧...</string>
    <string name="logout">退出登录</string>
    <string name="switch_user">切换账号</string>
    <string name="user_data_edit">编辑个人资料</string>
    <string name="nickename">昵称：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="save_changes">保存更改</string>
    <string name="birthday">生日：</string>
    <string name="sex">性别：</string>
    <string name="current_password">当前密码：</string>
    <string name="new_password">新密码：</string>
    <string name="new_password_repeat">确认密码：</string>
    <string name="register">新用户注册</string>
    <string name="register_btn">注册</string>
    <string name="province">省份：</string>
    <string name="comment">回复</string>
    <string name="back_to_shitlist">吐槽列表</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_email_password">邮箱或密码错误</string>
    <string name="send_success">发表成功</string>

    <string name="wrong_repeat_password">重复密码错误</string>
    <string name="repeat_email">邮箱已被注册</string>
    <string name="repeat_username">用户名已被注册</string>
    <string name="wrong_email_pattern">邮箱格式错误</string>
    <string name="register_success">注册成功</string>

    <string name="no_email">请输入邮箱</string>
    <string name="no_pwd">请输入密码</string>
    <string name="no_username">请输入用户名</string>
    <string name="email">邮箱</string>

    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="updating">最近更新：</string>
    <string name="complete">刷新成功</string>

    <string name="have_praised">您已经赞过！</string>
    <string name="annoy_user">匿名用户</string>


    <string name="edit_profile">个人资料</string>
    <string name="sketch">草稿</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>

    <string name="modify_success">修改成功</string>
    <string name="wrong_password">密码错误</string>
    <string name="main_title">吐槽列表</string>
    <string name="txt_menu_title">菜单</string>

</resources>
