<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/personal_menu_padding"
    android:background="@drawable/menu">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/battlefield" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/txt_menu_title"
            android:id="@+id/textView4"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingTop="@dimen/personal_menu_padding"
        android:paddingBottom="@dimen/personal_menu_padding">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/id_edit_personal_data">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView2"
                android:layout_weight="1"
                android:src="@drawable/user"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/edit_profile"
                android:id="@+id/textView7"
                android:layout_weight="4"
                android:textSize="@dimen/text_size"
                android:paddingLeft="10dp"
                android:gravity="center_vertical" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView4"
                android:layout_weight="1"
                android:src="@drawable/navigation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/sketch"
                android:id="@+id/textView8"
                android:layout_weight="4"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:paddingLeft="10dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView5"
                android:layout_weight="1"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView6"
                android:layout_weight="1"
                android:src="@drawable/setting" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/settings"
                android:id="@+id/textView10"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView7"
                android:layout_weight="1"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView12"
                android:layout_weight="1"
                android:src="@drawable/question" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/about"
                android:id="@+id/textView11"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView13"
                android:layout_weight="1"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:id="@+id/id_personal_menu_split"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/textView12"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/id_personal_menu_split"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_user"
            android:id="@+id/textView13"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/id_personal_menu_split"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>
</LinearLayout>
