<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/profile">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/textView5"
                android:layout_weight="2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/id_user_image"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_weight="3"
                android:src="@drawable/head" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/textView6"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/login_padding"
            android:paddingRight="@dimen/login_padding">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/id_username"
                    android:layout_weight="1"
                    android:background="@drawable/username_style"
                    android:hint="@string/email"
                    android:textSize="@dimen/text_size"
                    android:padding="@dimen/login_padding" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:id="@+id/id_clear_text"
                        android:src="@drawable/remove"
                        android:adjustViewBounds="true"
                        android:padding="5dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:id="@+id/id_show_users"
                        android:adjustViewBounds="true"
                        android:src="@drawable/down"
                        android:padding="5dp" />

                </LinearLayout>

            </FrameLayout>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/id_password"
                android:layout_weight="1"
                android:background="@drawable/password_style"
                android:inputType="textPassword"
                android:padding="@dimen/login_padding"
                android:hint="@string/password"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="-2dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/login"
            android:id="@+id/id_login"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:textSize="@dimen/text_size"
            android:textColor="@color/login_button_text"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:id="@+id/id_split"
                android:layout_centerInParent="true"
                android:textSize="@dimen/text_size"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newuser"
                android:id="@+id/id_new_user"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/id_split"
                android:textSize="@dimen/text_size"
                android:textColor="@color/newuser_lostpwd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lostpwd"
                android:id="@+id/id_forget_pwd"
                android:layout_toRightOf="@+id/id_split"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size"
                android:textColor="@color/newuser_lostpwd" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
